--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Mes projets et exercices en html/css</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+    <body>
+      <header>
+        <div>Image de votre LoGo</div>
+        <h2>Page d'accueil</h2>
+      </header>
+
+      <nav>
+        <ul class="menu_deroulant">
+          <li><a href="index.html">Page d'accueil</a></li>
+          <li>
+            <a href="#">Exercices du td2</a>
+            <ul>
+              <li>
+                <a href="td2_page2.html"> td2: exercice 2</a>
+              </li>
+              <li>
+                <a href="td2_page3.html"> td2: exercice 3</a>
+              </li>
+              <li>
+                <a href="td2_page4.html"> td2: exercice 4</a>
+              </li>
+              <li>
+                <a href="td2_page5.html"> td2: exercice 5</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">Exercices du td3</a>
+            <ul>
+              <li>
+                <a href="td3_page1.html"> td3: exercice 1</a>
+              </li>
+              <li>
+                <a href="td3_page2.html"> td3: exercice 2</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">Exercices du td4</a>
+            <ul>
+              <li>
+                <a href="td4_page1.html"> td4: exercice 1</a>
+              </li>
+              <li>
+                <a href="td4_page2.html"> td4: exercice 2</a>
+              </li>
+              <li>
+                <a href="td4_page3.html"> td4: exercice 3</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+
+      <article>
+        <h1>Corrections des TD du cours HTML/CSS</h1>
+        <div>Dans ce site vous trouverez quelques exercices corrigés, ci dessous quelques exercices:</div>
+      <div class="accueil">
+        <div>
+          <div><a href="td4_page3.html"> td4: exercice 3</a></div>
+          <div><a href="td4_page2.html"> td4: exercice 3</a></div>
+          <div><a href="td3_page2.html"> td4: exercice 3</a></div>
+        </div>
+        <div>
+          <div><a href="td5_page1.html"> td4: exercice 3</a></div>
+          <div><a href="td3_page1.html"> td4: exercice 3</a></div>
+          <div><a href="td2_page5.html"> td4: exercice 3</a></div>
+        </div>
+      </div>
+      </article>
+
+      <footer>
+        <div>Nom</div>
+        <div>prenom</div>
+        <div>email</div>
+      </footer>
+    </body>
+  </html>
+</html>
 
